# ai-chat

./: .env  Dockerfile  README.md  main.py  pyproject.toml
clients/: openai_client.py
database/: engine.py  orm_base.py  orm_models.py
frontend/: app.js  index.html  styles.css
migrations/: env.py
migrations/versions/: 2226c3fe92e6_added_index_to_message_for_faster_.py  2c50bf60d56a_add_sender_type_column_to_message.py  9d78c551947e_initial_revision_with_core_tables.py
routes/: characters.py  dialogue.py  dialogues.py  messages.py  user.py
structures/: character.py  dialogue.py  message.py  user.py
tests/: test_characters.py  test_messages.py  test_routes.py
